--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,9 +10,10 @@ use_directory_urls: false   # Keeps file extensions in URLs (e.g., docs/index.ht
 nav:
   - General:                    # General project information
       - Home: README.md                         # Main landing page
-      - Setup:
-        - Getting Started: docs/setup/getting_started.md
-        - Installation: docs/setup/install.md # Installation guide
+      - First Steps::
+        - Getting Started: docs/first_steps/getting_started.md
+        - Installation: docs/first_steps/install.md # Installation guide
+        - DDC in Gyselalibxx: docs/first_steps/DDC_in_gyselalibxx.md
   - Standards:
       - Coding Standard: docs/standards/CODING_STANDARD.md
       - Math & Physics: docs/standards/mathematical_and_physical_conventions.md
@@ -20,7 +21,6 @@ nav:
       - Adding Docs: docs/development/Adding_docs.md
       - Using Git: docs/development/Using_git.md
       - Developer FAQ: docs/development/developer_FAQ.md
-      - DDC in Gyselalibxx: docs/development/DDC_in_gyselalibxx.md
       - Gyselalib Contents: src
   - Troubleshooting:
       - Compilation Issues: docs/troubleshooting/Common_compilation_problems.md
