--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -43,6 +43,18 @@ nav:
           - 'Macros': 'gyselalibxx/macros.md'  # Macro definitions
           - 'Files': 'gyselalibxx/files.md'  # File-level documentation
 
+# Recommended for strict MkDocs diagnostics
+validation:
+  nav:
+    not_found: warn
+    omitted_files: warn
+  links:
+    not_found: warn
+    omitted_files: warn
+    absolute_links: warn  # Or 'relative_to_docs' - new in MkDocs 1.6
+    unrecognized_links: warn
+    anchors: warn  # New in MkDocs 1.6
+
 # Theme Configuration
 theme: readthedocs  # Uses the ReadTheDocs theme for the site
 
