Use my fork to fix broken links and turn on all warnings

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -49,7 +49,7 @@ validation:
     omitted_files: warn
     absolute_links: warn  # Or 'relative_to_docs' - new in MkDocs 1.6
     unrecognized_links: warn
-    anchors: info  # New in MkDocs 1.6
+    anchors: warn  # New in MkDocs 1.6
 
 # Theme Configuration
 theme: readthedocs  # Uses the ReadTheDocs theme for the site
