--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -15,14 +15,14 @@ nav:
         - Installation:
             - docs/first_steps/install.md # Installation guide
             - toolchains/README.md
-        - DDC in Gyselalibxx: docs/first_steps/DDC_in_gyselalibxx.md
+        - DDC in Gyselalib++: docs/first_steps/DDC_in_gyselalibxx.md
   - Standards:
       - Coding Standard: docs/standards/CODING_STANDARD.md
       - Math & Physics: docs/standards/mathematical_and_physical_conventions.md
-  - User:
-      - Gyselalib Source: src
-      - Gyselalib Simulations: simulations
-      - Gyselalib Tests: tests
+  - Gyselalib++:
+      - Source: src
+      - Simulations: simulations
+      - Tests: tests
   - Development:
       - Adding Docs: docs/development/Adding_docs.md
       - Using Git: docs/development/Using_git.md
