--- a/.typos.toml
+++ b/.typos.toml
@@ -1,9 +1,10 @@
 [default]
 locale = 'en-gb'
 extend-ignore-re = ["capitalize()",
-                    "MPI_\\S*",
-                    "PDI_\\S*",
-                    "ddc::\\S*",
+                    "MPI_[^(\\s]*",
+                    "PDI_[^(\\s]*",
+                    "CMAKE_\\S*",
+                    "ddc::[^(\\s]*",
                     "gko_exec->\\S*",
                     "on_finalize:",
                     "colors.Normalize",
