Update GitLab CI (#220)
Update the GitLab CI to fix the updated pylint command. Additionally add
the new markdown linter and spell checker

--- a/.typos.toml
+++ b/.typos.toml
@@ -14,7 +14,8 @@ extend-ignore-re = ["capitalize()",
                     "Gif-sur-Yvette"
                     ]
 extend-ignore-identifiers-re = [
-    "Comput. Phys. Commun."
+    "Comput. Phys. Commun.",
+    "J. Sci. Comput."
 ]
 
 [default.extend-words]
