Don't ask permission to skip GPU tests

--- a/.github/workflows/gpu_tests.yml
+++ b/.github/workflows/gpu_tests.yml
@@ -36,18 +36,16 @@ jobs:
   trigger_gpu_tests:
     runs-on: ubuntu-latest
     environment: 'GitLab GPU trigger'
+    if: ${{ inputs.is_duplicate }}
     steps:
       - name: Checkout gyselalibxx
-        if: ${{ ! inputs.is_duplicate }}
         uses: actions/checkout@v4
       - name: "Filter tests"
-        if: ${{ ! inputs.is_duplicate }}
         uses: ./.github/actions/test_filter
         with:
           base_sha: ${{ inputs.merge_target }}
           trigger_type: ${{ github.event_name }}
       - name: "Send to persee"
-        if: ${{ ! inputs.is_duplicate }}
         run: |
           git clone https://ci_bot:${GITLAB_PAT}@gitlab.maisondelasimulation.fr/gysela-developpers/gyselalibxx.git --single-branch --branch trigger_persee
           cd gyselalibxx
@@ -60,15 +58,18 @@ jobs:
         shell: bash
         env:
           GITLAB_PAT: ${{secrets.GITLAB_PAT}}
+
+  pass_duplicate_gpu_tests:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.is_duplicate }}
+    steps:
       - name: "Get bot token"
-        if: ${{ inputs.is_duplicate }}
         uses: actions/create-github-app-token@v1
         id: app-token
         with:
           app-id: 1132905
           private-key: ${{ secrets.BOT_PEM }}
       - name: "Validate GPU using previous success"
-        if: ${{ inputs.is_duplicate }}
         run: |
           curl -L -X POST \
             --header "Accept: application/vnd.github+json" \
