--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,15 +18,10 @@ jobs:
     if: github.repository == 'gyselax/gyselalibxx' && github.event.pull_request.draft == false
     # Map a step output to a job output
     outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+      is_duplicate: ${{ steps.skip_check.outputs.should_run }}
     steps:
       - id: skip_check
-        uses: fkirc/skip-duplicate-actions@v5
-        with:
-          # All of these options are optional, so you can remove them if you are happy with the defaults
-          skip_after_successful_duplicate: 'true'
-          paths: '["src/**/*.hpp", "src/**/*.cpp", "tests/**/*.hpp", "tests/**/*.cpp", "simulations/**/*.hpp", "simulations/**/*.cpp", "**/CMakeLists.txt", "vendor/**", ".github/**", "toolchains/docker.gyselalibxx_env/**", "toolchains/v100.persee/**"]'
-          cancel_others: 'false'
+        uses: ./.github/actions/duplicate_check
 
   cpu_tests:
     strategy:
@@ -40,7 +35,7 @@ jobs:
       toolchain: ${{ matrix.toolchain }}
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      is_duplicate: ${{ needs.pre_job.outputs.should_skip == 'true' && github.event.pull_request.draft == false }}
+      is_duplicate: ${{ needs.pre_job.outputs.is_duplicate == 'false' && github.event.pull_request.draft == false }}
 
   gpu_tests:
     name: GPU Test
@@ -51,7 +46,7 @@ jobs:
       merge_target: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
       SHA: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      is_duplicate: ${{ needs.pre_job.outputs.should_skip == 'true' && github.event.pull_request.draft == false }}
+      is_duplicate: ${{ needs.pre_job.outputs.is_duplicate == 'true' && github.event.pull_request.draft == false }}
     secrets: inherit
 
   set_draft_failing:
