--- a/.typos.toml
+++ b/.typos.toml
@@ -12,7 +12,8 @@ extend-ignore-re = ["capitalize()",
                     "'center left'",
                     "'center right'",
                     "unrecognized_links",
-                    "Gif-sur-Yvette"
+                    "Gif-sur-Yvette",
+                    "GYSELALIBXX_HOME"
                     ]
 extend-ignore-identifiers-re = [
     "Comput. Phys. Commun.",
