Can't match gyselalibxx

--- a/.typos.toml
+++ b/.typos.toml
@@ -44,9 +44,8 @@ extend-exclude = ["*.tex",
 extend-glob = ["*.md"]
 
 [type.md.extend-words]
-gyselalibxx = "Gyselalib++"
 Gyselalibxx = "Gyselalib++"
+gyselalib = "Gyselalib++"
 
 [type.md.extend-identifiers]
-"gyselalib[^+]" = "Gyselalib++"
 "Gyselalib[^+]" = "Gyselalib++"
