More explicit message

--- a/.github/workflows/flag_checks.yml
+++ b/.github/workflows/flag_checks.yml
@@ -16,7 +16,8 @@ jobs:
           ref: main
       - run: |
           gh pr edit ${{ github.event.pull_request.number }} --remove-label "Ready to review"
-          gh pr comment ${{ github.event.pull_request.number }} -b "Please remove the draft status if the PR is ready to review"
+          msg="Please remove the draft status if the PR is ready to review. The 'Ready to review' label will be added automatically when the tests are shown to be passing"
+          gh pr comment ${{ github.event.pull_request.number }} -b "${msg}"
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
